--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -9,7 +9,7 @@
 }
 .storybook-button--primary {
   color: white;
-  background-color: #d383c7;
+  background-color: #b944a7;
 }
 .storybook-button--secondary {
   color: #333;
